--- a/SpoofifyClient/package.json
+++ b/SpoofifyClient/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.3.1",
+    "component": "^1.1.0",
     "core-js": "^3.4.2",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
