--- a/SpoofifyClient/angular.json
+++ b/SpoofifyClient/angular.json
@@ -29,13 +29,16 @@
             "styles": [
               
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-select/dist/css/bootstrap-select.min.css",
               "src/styles.scss"
             ],
             "scripts": [
               
               "node_modules/jquery/dist/jquery.min.js",
 
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+
+              "node_modules/bootstrap-select/dist/js/bootstrap-select.min.js"
 
             ],
             "es5BrowserSupport": true
