--- a/SpoofifyClient/package.json
+++ b/SpoofifyClient/package.json
@@ -20,10 +20,14 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@types/bootstrap": "^4.3.1",
+    "@types/jquery": "^3.3.31",
     "bootstrap": "^4.3.1",
+    "bootstrap-select": "^1.13.12",
     "component": "^1.1.0",
     "core-js": "^3.4.2",
     "jquery": "^3.4.1",
+    "ng-bootstrap": "^1.6.3",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
@@ -33,6 +37,7 @@
     "@angular/cli": "^8.3.19",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@types/bootstrap-select": "^1.11.1",
     "@types/jasmine": "~3.4.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~12.12.11",
